Updating display.php with bootstrap

--- a/assets/css/custom.style.css
+++ b/assets/css/custom.style.css
@@ -1,8 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
-body {
-	padding-top: 50px;
-	padding-bottom: 20px;
+.navbar {
+    margin-bottom: 0 !important;
+}
+
+.thumbnail {
+	display: inline-block !important;
 }
 
 .gallery {
